--- a/components/Intro.module.css
+++ b/components/Intro.module.css
@@ -104,6 +104,10 @@
   font-size: calc(var(--yr) * 3.5);
   line-height: calc(var(--yr) * 5);
 
+  &.s {
+    grid-column: 1 / -1;
+  }
+
   @media (--s) {
     font-size: calc(var(--yr) * 4);
     line-height: calc(var(--yr) * 6);
