--- a/components/CommonImage/CommonImage.module.css
+++ b/components/CommonImage/CommonImage.module.css
@@ -1,5 +1,11 @@
 .root {
-  margin-bottom: calc(var(--yr) * var(--s4));
+  margin-bottom: var(--sb);
+
+  &.content {
+    @media (--s) {
+      padding: 0 calc(2 / 13 * 100%);
+    }
+  }
 
   /* &:last-child {
     margin-bottom: 0;
