--- a/components/Factory/Factory.module.css
+++ b/components/Factory/Factory.module.css
@@ -1,41 +1,3 @@
-.root {
-  overflow: hidden;
-
-  @media (--s) {
-    /* margin-left: 60px; */
-  }
-}
-
-.factory {
-  padding-top: calc(var(--yr) * var(--s6));
-
-  @media (--l) {
-    height: 100vh;
-    padding-top: 0;
-    display: flex;
-  }
-}
-
-.page {
-  @media (--s) {
-    padding: 0 calc(1 / 8 * 100%);
-  }
-
-  @media (--l) {
-    position: relative;
-    display: grid;
-    align-items: start;
-    grid-auto-rows: min-content;
-    padding: 100px 0 0;
-    min-width: calc(5 / 13 * (100vw - 60px));
-    margin-left: calc(1 / 13 * (100vw - 60px));
-
-    &:last-child {
-      margin-right: calc(1 / 13 * (100vw - 60px));
-    }
-  }
-}
-
 .back {
   position: absolute;
   top: calc(var(--yr) * 10);
@@ -62,4 +24,9 @@
 .rd {
   /* display: block; */
   color: rgb(var(--hl_color));
+}
+
+.page {
+  /* max-width: 1600px; */
+  margin: 0 auto;
 }
