--- a/components/MainImage/MainImage.module.css
+++ b/components/MainImage/MainImage.module.css
@@ -1,17 +1,4 @@
 .root {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  & figure {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-position: center;
-    background-size: cover;
-  }
+  position: relative;
+  margin-bottom: var(--sb);
 }
