--- a/css/globals.css
+++ b/css/globals.css
@@ -13,10 +13,10 @@ a {
 
 body {
   font-family: var(--ff_serif);
-  font-size: calc(var(--yr) * 3.5);
-  line-height: calc(var(--yr) * 5.5);
+  font-size: calc(var(--yr) * 4);
+  line-height: calc(var(--yr) * 6);
 
-  @media (--s) {
+  /* @media (--s) {
     font-size: calc(var(--yr) * 4);
     line-height: calc(var(--yr) * 6);
   }
@@ -24,7 +24,7 @@ body {
   @media (--l) {
     font-size: calc(var(--yr) * 4 * var(--fs_mod));
     line-height: calc(var(--yr) * 6 * var(--fs_mod));
-  }
+  } */
 }
 
 figure {
