--- a/components/CommonImages/CommonImages.module.css
+++ b/components/CommonImages/CommonImages.module.css
@@ -2,6 +2,12 @@
   display: grid;
   margin-bottom: var(--sb);
   grid-template-columns: 1fr 1fr;
-  grid-gap: var(--xr);
+  grid-gap: 4vw;
   align-items: start;
+
+  @media (--s) {
+    &.middle {
+      padding: 0 calc(1 / 13 * 100%);
+    }
+  }
 }
