--- a/css/variables.css
+++ b/css/variables.css
@@ -8,7 +8,7 @@
 
   /* --ff_serif: 'EB Garamond', serif; */
   --ff_serif: 'PT Serif', serif;
-  --ff_sans: 'Po Beda', sans-serif;
+  --ff_sans: 'Oswald', sans-serif;
   --yr: 0.25rem;
   --xr: 1rem;
 
