--- a/components/CommonImage/CommonImage.module.css
+++ b/components/CommonImage/CommonImage.module.css
@@ -1,13 +1,15 @@
 .root {
   margin-bottom: var(--sb);
 
-  &.content {
-    @media (--s) {
+  @media (--s) {
+    &.content {
       padding: 0 calc(2 / 13 * 100%);
     }
   }
 
-  /* &:last-child {
-    margin-bottom: 0;
-  } */
+  @media (--s) {
+    &.content {
+      padding: 0 calc(3 / 13 * 100%);
+    }
+  }
 }
