--- a/components/GunsOfWar/GunsOfWar.module.css
+++ b/components/GunsOfWar/GunsOfWar.module.css
@@ -1,22 +1,32 @@
-.gun {
-  display: flex;
-  align-items: flex-end;
+.root {
+  padding: calc(var(--yr) * var(--s4)) var(--xr) calc(var(--yr) * var(--s6));
+  margin-bottom: var(--sb);
+  background-color: rgb(248, 248, 248);
+
+  @media (--s) {
+    padding: calc(var(--yr) * var(--s4)) calc(2 / 13 * 100%) calc(var(--yr) * var(--s6));
+  }
+
+  @media (--l) {
+    padding: calc(var(--yr) * var(--s4)) calc(3 / 13 * 100%) calc(var(--yr) * var(--s6));
+  }
 }
 
-.img {
-  width: 5rem;
+.label {
+  font-family: var(--ff_sans);
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 .title {
+  margin: calc(var(--yr) * var(--s2)) 0 0;
+  composes: bt from '../Fonts.module.css';
   color: rgb(var(--hl_color));
+  font-family: var(--ff_sans);
+  text-transform: uppercase;
 }
 
 .desc {
-  composes: bt from "../Fonts.module.css";
-  background-color: rgb(var(--grey_color));
-
-  @media (--l) {
-    font-size: calc(var(--yr) * 6.5);
-    line-height: calc(var(--yr) * 8);
-  }
+  margin-top: calc(var(--yr) * var(--s2));
+  font-style: italic;
 }
