--- a/components/GunsOfWar/GunsOfWar.module.css
+++ b/components/GunsOfWar/GunsOfWar.module.css
@@ -29,4 +29,13 @@
 .desc {
   margin-top: calc(var(--yr) * var(--s2));
   font-style: italic;
+
+  & ol {
+    padding: 0;
+    margin: 0;
+
+    & li {
+      margin-bottom: calc(var(--yr) * var(--s2));
+    }
+  }
 }
