--- a/components/Intro.module.css
+++ b/components/Intro.module.css
@@ -177,6 +177,21 @@
   color: rgb(var(--hl_color));
   text-transform: uppercase;
 
+  &.txt {
+    font-size: calc(var(--yr) * 6);
+    line-height: calc(var(--yr) * 7);
+
+    @media (--s) {
+      font-size: calc(var(--yr) * 12);
+      line-height: calc(var(--yr) * 14);
+    }
+
+    @media (--l) {
+      font-size: calc(var(--yr) * 10 * var(--fs_mod));
+      line-height: calc(var(--yr) * 12 * var(--fs_mod));
+    }
+  }
+
   @media (--s) {
     font-size: calc(var(--yr) * 18);
     line-height: calc(var(--yr) * 18);
