--- a/css/variables.css
+++ b/css/variables.css
@@ -23,6 +23,7 @@
   --s5: 10;
   --s6: 12;
   --sb: 6vh;
+  --sbb: 3vh;
 
   @media (--s) {
     --s1: 2;
@@ -32,5 +33,6 @@
     --s5: 12;
     --s6: 16;
     --sb: 12vh;
+    --sbb: 6vh;
   }
 }
