--- a/components/GunsOfWar/GunsOfWar.module.css
+++ b/components/GunsOfWar/GunsOfWar.module.css
@@ -1,14 +1,14 @@
 .root {
-  padding: calc(var(--yr) * var(--s4)) var(--xr) calc(var(--yr) * var(--s6));
+  padding: var(--sb) var(--xr);
   margin-bottom: var(--sb);
   background-color: rgb(248, 248, 248);
 
   @media (--s) {
-    padding: calc(var(--yr) * var(--s4)) calc(2 / 13 * 100%) calc(var(--yr) * var(--s6));
+    padding: calc(var(--sb) / 2) calc(2 / 13 * 100%);
   }
 
   @media (--l) {
-    padding: calc(var(--yr) * var(--s4)) calc(3 / 13 * 100%) calc(var(--yr) * var(--s6));
+    padding: calc(var(--sb) / 2) calc(3 / 13 * 100%);
   }
 }
 
