--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -147,6 +147,10 @@
     background-image: url(../assets/index/images/factories/sverdlov.jpg);
   }
 
+  &.korund {
+    background-image: url(../assets/index/images/factories/korund.jpg);
+  }
+
   &.yakor {
     background-image: url(../assets/index/images/factories/yakor.jpg);
   }
