--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -185,6 +185,10 @@
     background-image: url(../assets/index/images/factories/termal.jpg);
   }
 
+  &.shipyard {
+    background-image: url(../assets/index/images/factories/shipyard.jpg);
+  }
+
   /* Приборостроение */
 
   &.nitel {
