Сокол: подписи.  Images на мобильном

--- a/components/CommonImages/CommonImages.module.css
+++ b/components/CommonImages/CommonImages.module.css
@@ -1,11 +1,13 @@
 .root {
   display: grid;
   margin-bottom: var(--sb);
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 4vw;
+  grid-gap: calc(var(--yr) * var(--s4));
   align-items: start;
 
   @media (--s) {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 4vw;
+
     &.middle {
       padding: 0 calc(1 / 13 * 100%);
     }
