--- a/css/globals.css
+++ b/css/globals.css
@@ -15,6 +15,10 @@ body {
   font-size: calc(var(--yr) * 4);
   line-height: calc(var(--yr) * 6);
 
+  &.nav-open {
+    overflow: hidden;
+  }
+
   /* @media (--s) {
     font-size: calc(var(--yr) * 4);
     line-height: calc(var(--yr) * 6);
