--- a/components/Factory/Nav.module.css
+++ b/components/Factory/Nav.module.css
@@ -41,6 +41,35 @@
       margin-bottom: calc(var(--yr) * var(--s2));
     }
   }
+
+  & a {
+    transition: transform 0.3s;
+    display: block;
+    position: relative;
+    padding-right: 2rem;
+
+    &::before {
+      position: absolute;
+      content: '';
+      height: 2px;
+      width: 2rem;
+      background: rgb(var(--hl_color));
+      display: block;
+      top: 0.7rem;
+      transform: translateX(-3rem);
+      opacity: 0;
+      transition: opacity 0.4s;
+    }
+
+    &.active,
+    &:hover {
+      transform: translateX(3rem);
+
+      &::before {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 .section {
