--- a/components/Speech/Speech.module.css
+++ b/components/Speech/Speech.module.css
@@ -40,7 +40,7 @@
 
   @media (--s) {
     font-size: 2vw;
-    line-height: 2.8vw;
+    line-height: 2.2vw;
   }
 }
 
@@ -49,13 +49,8 @@
   font-style: italic;
 
   @media (--s) {
-    font-size: 1.8vw;
-    line-height: 3vw;
-  }
-
-  @media (--l) {
-    font-size: 1.3vw;
-    line-height: 2.4vw;
+    font-size: var(--mfs);
+    line-height: var(--mlh);
   }
 }
 
