--- a/components/Speech/Speech.module.css
+++ b/components/Speech/Speech.module.css
@@ -20,7 +20,7 @@
     left: -2rem;
     content: '';
     display: block;
-    border: 1px solid rgb(var(--hl_color));
+    border-left: 2px solid rgb(var(--hl_color));
   }
 }
 
