--- a/components/Factory/Nav.module.css
+++ b/components/Factory/Nav.module.css
@@ -43,7 +43,6 @@
   }
 
   & a {
-    transition: padding 0.3s;
     display: block;
     position: relative;
     padding-right: 2rem;
@@ -58,14 +57,22 @@
       top: 0.7rem;
       transform: translateX(-3rem);
       opacity: 0;
-      transition: opacity 0.4s;
+      transition: opacity 0.4s, transform 0.3s;
+    }
+
+    & span {
+      display: block;
+      transition: transform 0.3s;
     }
 
     &.active,
     &:hover {
-      padding-left: 2rem;
+      & span {
+        transform: translateX(2rem);
+      }
 
       &::before {
+        transform: translateX(-1rem);
         opacity: 1;
       }
     }
